--- a/wp-content/themes/sage/assets/styles/common/_global.scss
+++ b/wp-content/themes/sage/assets/styles/common/_global.scss
@@ -1,1 +1,68 @@
 
+/* Custom, iPhone Retina */ 
+@media only screen and (min-width : 320px) {
+	body {
+		font-family: 'Lato', sans-serif;
+		color:$midnight-blue;
+		font-weight:$font-medium;
+	}
+	h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+		font-family: inherit;
+		font-weight: $font-light;
+		line-height: 1.1;
+		color: inherit;
+		margin-top:0;
+		margin-bottom:1.5em;
+	}
+	p, li {
+		font-weight: $font-light;
+	}  
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (min-width : 480px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
+	h1 {
+		font-size:48px;
+	}
+	h2 {
+		font-size:32px;
+	}
+	h3 {
+		font-size:24px;
+	}
+	h4 {
+		font-size:20px;
+	}
+	h5 {
+		font-size:18px;
+	}
+	p, li {
+		font-size: 17px;
+	}
+	p {
+	    margin-bottom: 1.5em;
+	}
+	a {
+		color:$peter-river;
+	}
+	a:hover {
+		color:$belize-hole;
+		text-decoration:none;
+	}
+}
