--- a/wp-content/themes/sage/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/sage/assets/styles/layouts/_pages.scss
@@ -227,7 +227,7 @@
 		background-image:url(../images/slide-two.jpg);
 	}
 	.slide-three {
-		background-image:url(../images/uber_business.jpg);
+		background-image:url(../images/slide-three.jpg);
 	}
 	.mission-image {
 		height:200px;
