--- a/wp-content/themes/sage/assets/styles/common/_global.scss
+++ b/wp-content/themes/sage/assets/styles/common/_global.scss
@@ -15,27 +15,13 @@
 		margin-bottom:1.5em;
 	}
 	p, li {
+		font-size: 15px;
 		font-weight: $font-light;
 	}  
 }
 
-/* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) {
-
-}
-
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
-
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-
-}
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
 
 	h1 {
 		font-size:48px;
